configuring project in the way that JWT works fine